--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "nanoid": "^4.0.2"
+    "@reduxjs/toolkit": "^1.9.3",
+    "nanoid": "^4.0.2",
+    "react-redux": "^8.0.5"
   }
 }
